<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restlet first application</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="age">Age</string>
    <string name="buttonGet">Get</string>
    <string name="buttonUpdate">Update</string>
    
</resources>
