<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/textContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact" />
    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textContact"
        android:layout_below="@+id/textContact"
        android:ems="10"
        android:hint="@string/firstName" >
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editFirstName"
        android:layout_below="@+id/editFirstName"
        android:ems="10"
        android:hint="@string/lastName" >
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLastName"
        android:layout_below="@+id/editLastName"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/age" >
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/buttonGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editAge"
        android:layout_below="@+id/editAge"
        android:onClick="retrieveContact"
        android:text="@string/buttonGet" />
    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/buttonGet"
        android:layout_below="@+id/editAge"
        android:onClick="updateContact"
        android:text="@string/buttonUpdate" />
</RelativeLayout>